--- a/Text/sections/section2.II.tex
+++ b/Text/sections/section2.II.tex
@@ -2,80 +2,92 @@
 
 \subsection{Размер возмущения}
 
-Коэффициент $d$ отвечает за то, насколько сильно будет возмущаться центральная точка для получения следующих измерений. То есть, насколько $k_n^{+}$ и $k_n^{-}$ будут отличаться от $\hat{k}_{n - 1}$. Зависимость модулярности от размера возмущения при $f(\mu, k) = -10 \ln \mu,\ \sigma = 500,\ \hat{k}_0 = 10$ будет выглядеть следующим образом:
+Коэффициент $d$ отвечает за то, насколько сильно будет возмущаться центральная точка для получения следующих измерений. То есть, насколько $k_n^{+}$ и $k_n^{-}$ будут отличаться от $\hat{k}_{n - 1}$. На рисунке \ref{fig:arg-d} можно увидеть зависимость модулярности от размера возмущения при $f(\mu, k) = -10 \ln \mu,\ \sigma = 500,\ \hat{k}_0 = 10$.
 
+На графах \emph{cnr-2000} и \emph{eu-2005} значения модулярности не очень сильно менялись в зависимости от параметра $d$, хотя некоторые значения $d$ и давали более большие значения. Однако на графах \emph{cond-mat-2003} и \emph{caidaRouterLevel} после некоторого порогового значения возмущения модулярность показывала, что получившееся разбиение не лучше случайного.
+
+\newpage~\vspace{-2.4cm}\\~
+\begin{vwcol}[widths={0.99, 0.01}, rule=0pt]
 \begin{figure}[H]
 	\begin{tikzpicture}
 		\begin{axis}[
 		    table/col sep = semicolon,
 		    height = 0.16\paperheight, 
-		    width = 0.49\columnwidth,
+		    width = 0.45\columnwidth,
 		    xlabel = {$d$},
 		    ylabel = {$Q$},
 		    legend pos = north east,
 		    no marks,
-		    title = {cond-mat-2003}
+		    title = {cond-mat-2003},
+		    cycle list name = diploma list,
+		    y label style={at={(axis description cs:-0.14,.5)}, anchor=south},
 		]
 		\addplot table [x={d}, y={q}]{data/arg/d/cond_d.csv};
 		\end{axis}
 	\end{tikzpicture}
-	\hskip 0.01\columnwidth
+	\hskip 10pt
 	\begin{tikzpicture}
 		\begin{axis}[
 		    table/col sep = semicolon,
 		    height = 0.16\paperheight, 
-		    width = 0.49\columnwidth,
+		    width = 0.45\columnwidth,
 		    xlabel = {$d$},
 		    ylabel = {$Q$},
 		    legend pos = south east,
 		    no marks,
-		    title = {caidaRouterLevel}
+		    title = {caidaRouterLevel},
+		    cycle list name = diploma list,
+		    y label style={at={(axis description cs:-0.13,.5)}, anchor=south},
 		]
 		\addplot table [x={d}, y={q}]{data/arg/d/caida_d.csv};
 		\end{axis}
-	\end{tikzpicture} % 2nd row
+	\end{tikzpicture}
 	\begin{tikzpicture}
 		\begin{axis}[
 		    table/col sep = semicolon,
 		    height = 0.16\paperheight, 
-		    width = 0.49\columnwidth,
+		    width = 0.45\columnwidth,
 		    xlabel = {$d$},
 		    ylabel = {$Q$},
 		    legend pos = south east,
 		    no marks,
 		    title = {cnr-2000},
 		    yticklabel style={/pgf/number format/fixed,
-                  /pgf/number format/precision=3}
+                  /pgf/number format/precision=3},
+		    cycle list name = diploma list,
+		    y label style={at={(axis description cs:-0.14,.5)}, anchor=south},
 		]
 		\addplot table [x={d}, y={q}]{data/arg/d/cnr_d.csv};
 		\end{axis}
 	\end{tikzpicture}
-	\hskip 0.01\columnwidth
+	\hskip 7pt
 	\begin{tikzpicture}
 		\begin{axis}[
 		    table/col sep = semicolon,
 		    height = 0.16\paperheight, 
-		    width = 0.49\columnwidth,
+		    width = 0.45\columnwidth,
 		    xlabel = {$d$},
 		    ylabel = {$Q$},
 		    legend pos = south east,
 		    no marks,
-		    title = {eu-2005}
+		    title = {eu-2005},
+		    cycle list name = diploma list,
+		    y label style={at={(axis description cs:-0.15,.5)}, anchor=south},
 		]
 		\addplot table [x={d}, y={q}]{data/arg/d/eu_d.csv};
 		\end{axis}
 	\end{tikzpicture}
 	\caption{Зависимость модулярности от размера возмущения на четырёх графах}
+	\label{fig:arg-d}
 \end{figure}
-
-На графах \emph{cnr-2000} и \emph{eu-2005} значения модулярности не очень сильно менялись в зависимости от параметра $d$, хотя некоторые значения $d$ и давали более большие значения. Однако на графах \emph{cond-mat-2003} и \emph{caidaRouterLevel} после некоторого порогового значения возмущения модулярность показывала, что получившееся разбиение не лучше случайного.
-
+~\\~\\~\\~\\~\\~\\~\\~\\~\\~\\~\\
+\end{vwcol}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \subsection{Количество итераций в одном шаге}
 
-Параметр $\sigma$ указывает, как часто меняется $k$ в ходе работы \emph{ARG}. Так как в функции качества используется медиана прироста модулярности, а не прирост модулярности за все $\sigma$ итераций --- при изменении $\sigma$ нет необходимости менять функцию качества, модулярность прироста будет оставаться приблизительно такой же по величине, в то время как прирост модулярности линейно зависит от $\sigma$. Зависимость модулярности от количества итераций в одном шаге при $d = 5,\ f(\mu, k) = -10 \ln \mu,\ \hat{k}_0 = 10$ принимает такой вид:
+Параметр $\sigma$ указывает, как часто меняется $k$ в ходе работы \emph{ARG}. Так как в функции качества используется медиана прироста модулярности, а не прирост модулярности за все $\sigma$ итераций --- при изменении $\sigma$ нет необходимости менять функцию качества, модулярность прироста будет оставаться приблизительно такой же по величине, в то время как прирост модулярности линейно зависит от $\sigma$. Зависимость модулярности от количества итераций в одном шаге при $d = 5,\;f(\mu, k) = -10 \ln \mu,\;\hat{k}_0 = 10$ принимает такой вид:
 
 \begin{figure}[H]
 	\begin{tikzpicture}
@@ -87,7 +99,8 @@
 		    ylabel = {$Q$},
 		    legend pos = north east,
 		    no marks,
-		    title = {cond-mat-2003}
+		    title = {cond-mat-2003},
+		    cycle list name = diploma list,
 		]
 		\addplot table [x={sigma}, y={q}]{data/arg/sigma/cond_sigma.csv};
 		\end{axis}
@@ -101,7 +114,8 @@
 		    xlabel = {$\sigma$},
 		    legend pos = south east,
 		    no marks,
-		    title = {caidaRouterLevel}
+		    title = {caidaRouterLevel},
+		    cycle list name = diploma list,
 		]
 		\addplot table [x={sigma}, y={q}]{data/arg/sigma/caida_sigma.csv};
 		\end{axis}
@@ -117,7 +131,8 @@
 		    no marks,
 		    title = {cnr-2000},
 		    yticklabel style={/pgf/number format/fixed,
-                  /pgf/number format/precision=3}
+                  /pgf/number format/precision=3},
+		    cycle list name = diploma list,
 		]
 		\addplot table [x={sigma}, y={q}]{data/arg/sigma/cnr_sigma.csv};
 		\end{axis}
@@ -144,7 +159,8 @@
 		    ylabel = {$Q$},
 		    legend pos = north east,
 		    no marks,
-		    title = {cond-mat-2003}
+		    title = {cond-mat-2003},
+		    cycle list name = diploma list,
 		]
 		\addplot table [x={k0}, y={q}]{data/arg/k0/cond_k0.csv};
 		\end{axis}
@@ -158,7 +174,8 @@
 		    xlabel = {$\hat{k}_0$},
 		    legend pos = south east,
 		    no marks,
-		    title = {caidaRouterLevel}
+		    title = {caidaRouterLevel},
+		    cycle list name = diploma list,
 		]
 		\addplot table [x={k0}, y={q}]{data/arg/k0/caida_k0.csv};
 		\end{axis}
@@ -174,7 +191,8 @@
 		    no marks,
 		    title = {cnr-2000},
 		    yticklabel style={/pgf/number format/fixed,
-                  /pgf/number format/precision=3}
+                  /pgf/number format/precision=3},
+		    cycle list name = diploma list,
 		]
 		\addplot table [x={k0}, y={q}]{data/arg/k0/cnr_k0.csv};
 		\end{axis}
@@ -183,14 +201,16 @@
 	\label{fig:arg-k0}
 \end{figure}
 
-Как можно заметить, на разных графах модулярность ведёт себя по разному в зависимости от $\hat{k}_0$. График для графа \emph{cond-mat-2003} на рисунке \ref{fig:arg-k0} начинается от первого вхождения $\hat{k}_0 = 7$ (остальные от $\hat{k}_0 = 5$), так как при меньших значениях модулярность очень сильно падает. Это связано с тем, что $d = 5$ и следовательно $k_1^{-} = 1$, в то время как $RG_1$ часто работает сильно хуже $RG_k$ с параметром $k > 1$. Однако выгоднее использовать небольшое значение $\hat{k}_0$, хоть и большее $d + 1$.
+Как можно заметить, на разных графах модулярность ведёт себя по разному в зависимости от $\hat{k}_0$. График для графа \emph{cond-mat-2003} на рисунке \ref{fig:arg-k0} начинается от первого вхождения $\hat{k}_0 = 7$ (остальные от $\hat{k}_0 = 5$), так как при меньших значениях модулярность очень сильно падает. Это связано с тем, что $d = 5$ и следовательно $k_1^{-} = 1$, в то время как $RG_1$ часто работает сильно хуже $RG_k$ с параметром $k > 1$. Однако, как видно на рисунке, выгоднее использовать небольшое значение $\hat{k}_0$, хоть и большее $d + 1$.
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \subsection{Коэффициент $\beta$ функции качества}
 
-Коэффициент $\beta$ функции качества \eqref{eq:arg-f} указывает на то, насколько много внимания алгоритм обращает на величину точек $k^{-}_n$ и $k^{+}_n$ при выборе следующей центральной точки. Предполагалось, что чем больше $\beta$, тем быстрее будет работать алгоритм, однако возможно будет находить более плохие разбиения. Такие результаты получились при параметрах $d = 5,\ \sigma = 1000,\ \hat{k}_0 = 8$, функция качества $f(\mu, k) = -10(\ln \mu - \beta \ln k)$:
+Коэффициент $\beta$ функции качества \eqref{eq:arg-f} указывает на то, насколько много внимания алгоритм обращает на величину точек $k^{-}_n$ и $k^{+}_n$ при выборе следующей центральной точки. Предполагалось, что чем больше $\beta$, тем быстрее будет работать алгоритм, однако возможно будет находить более плохие разбиения. На рисунке \ref{fig:arg-beta} изображены результаты работы $ARG$ с параметрами $d = 5,\ \sigma = 1000,\ \hat{k}_0 = 8$, функция качества $f(\mu, k) = -10(\ln \mu - \beta \ln k)$ с разными значениями $\beta$ на графе \emph{cond-mat-2003}.
+
+Время работы сначала увеличивается на небольших значениях параметра $\beta$, а затем постепенно падает, в то время как модулярность при уменьшении $\beta$ сначала постепенно падает, но после некоторого переломного значения $\beta$ сильно падает.
 
 \begin{figure}[H]
 	\begin{tikzpicture}
@@ -202,7 +222,8 @@
 		    ylabel = {$Q$},
 		    legend pos = north east,
 		    x tick label style = {align = center, rotate = 20, anchor = north east},
-		    no marks
+		    no marks,
+		    cycle list name = diploma list,
 		]
 		\addplot table [x={beta}, y={q}]{data/arg/beta/cond_beta.csv};
 		\end{axis}
@@ -217,11 +238,13 @@
 		    legend pos = north east,
 		    no marks,
 		    x tick label style = {align = center, rotate = 20, anchor = north east},
+		    cycle list name = diploma list,
 		]
 		\addplot[red] table [x={beta}, y={time}]{data/arg/beta/cond_beta.csv};
 		\end{axis}
 	\end{tikzpicture}
 	\caption{Зависимость модулярности и времени от параметра функции качества $\beta$ на графе \emph{cond-mat-2003}}
+	\label{fig:arg-beta}
 \end{figure}
 
 
@@ -230,32 +253,15 @@
 \subsection{Сравнение}
 \label{subsec:arg-res}
 
-На таблицах \ref{tab:arg-res-q} и \ref{tab:arg-res-t} показано сравнение результатов работы рандомизированного жадного алгоритма и адаптивного рандомизированного жадного алгоритма. В качестве графов для рассмотрения выбраны 7 графов.
+На таблицах \ref{tab:arg-res-q} и \ref{tab:arg-res-t} показано сравнение результатов работы рандомизированного жадного алгоритма и адаптивного рандомизированного жадного алгоритма. В качестве входных данных для рассмотрения выбраны 7 тестовых графов.
 
-Рандомизированный жадный алгоритм в таблицах обозначается как $RG_k$. Адаптивный рандомизированный жадный алгоритм обозначается как $ARG_{\beta}$ с параметром функции качества $\beta$ в индексе, остальные параметры при этом равны $d = 5,\ f(\mu, k) = -10 (\ln \mu - \beta \ln k),\ \sigma = 1000,\ \hat{k}_0 = 8$. Такой набор параметров не гарантирует наилучший результат на каждом графе или даже наилучший в среднем по всем графам результат для адаптивного алгоритма, однако показывает неплохие результаты.
+Рандомизированный жадный алгоритм в таблицах обозначается как $RG_k$. Адаптивный рандомизированный жадный алгоритм обозначается как $ARG_{\beta}$ с параметром функции качества $\beta$ в индексе, остальные параметры при этом равны $d = 5,\;f(\mu, k) = -10 (\ln \mu - \beta \ln k),\;\sigma = 1000,\;\hat{k}_0 = 8$. Такой набор параметров не гарантирует наилучший результат на каждом графе или даже наилучший в среднем по всем графам результат для адаптивного алгоритма, однако показывает неплохие результаты.
 
 Оба алгоритма --- рандомизированные, поэтому на каждом отдельном запуске результат может оказаться очень хорошим или сравнительно плохим, однако даст мало сведений о качестве алгоритма. Поэтому для каждого графа производилось определённое количество запусков, и в качестве модулярности бралась медиана значений, а в качестве времени --- среднее, для повышения точности измерения времени.
 
-Так, для графа \emph{as-22july06} производился 101 запуск, для \emph{cond-mat-2003} 51 запуск, для \emph{caidaRouterLevel} и \emph{cnr-2000} 11 запусков, для \emph{in-2004} пять запусков, и для \emph{eu-2005} три запуска.% Для кратости в таблице эти графы записываются как \emph{22july} вместо \emph{as-22july06}, \emph{cond} вместо \emph{cond-mat-2003}, \emph{caida} вместо \emph{caidaRouterLevel} и \emph{cnr} вместо \emph{cnr-2000}.
+Для графа \emph{as-22july06} производился 101 запуск, для \emph{cond-mat-2003} --- 51 запуск, для \emph{caidaRouterLevel} и \emph{cnr-2000} --- 11 запусков, для \emph{in-2004} --- пять запусков, и для \emph{eu-2005} --- три запуска.
 
 Кроме того, в таблицу вошли результаты работы над автоматически сгенерированным графом \emph{auto40}, который уже появлялся в работе, к примеру в рисунке \ref{fig:q-auto13}. Для этого графа для повышения точности производилось 11 запусков.
-
-% \begin{table}[H]
-% 	\caption{Модулярности разбиений, полученных в результате работы рандомизированного жадного алгоритма и адаптивного рандомизированного жадного алгоритма с разными параметрами на тестовых графах}
-% 	\label{tab:arg-res-q}
-% 	\begin{tabularx}{\textwidth}{XR{1.5cm}R{1.5cm}R{1.5cm}R{1.5cm}R{1.5cm}R{1.5cm}R{1.5cm}}\hline
-% 				& 22july 	& cond 		& auto40	& caida 	& cnr 		& eu-2005	& in-2004		\\\hline
-% 	RG(1) 		& 0.65281	& 0.00012 	& 0.78944	& 0.01938	& 0.90237 	& 0.92765	& 0.00026	\\
-% 	RG(3)		& 0.64658	& 0.19727	& 0.79988	& 0.81101	& 0.91192	& 0.92559	& 0.97836	\\
-% 	RG(10)		& 0.64024	& 0.70738	& 0.80417	& 0.79883	& 0.91144	& 0.91780	& 0.97185	\\
-% 	RG(50)		& 0.63479	& 0.69403	& 0.80273	& 0.79300	& 0.90997	& 0.90416	& 0.97596	\\
-% 	ARG(0)		& 0.64262	& 0.71129	& 0.80136	& 0.79970	& 0.91028	& 0.91062	& 0.97614	\\
-% 	ARG(0.01)	& 0.64041	& 0.71232	& 0.80145	& 0.80114	& 0.91041	& 0.91047	& 0.97615	\\
-% 	ARG(0.05)	& 0.64264	& 0.71193	& 0.80174	& 0.80216	& 0.91039	& 0.91048	& 0.97616	\\
-% 	ARG(0.1)	& 0.64134	& 0.69749	& 0.80152	& 0.80059	& 0.91108	& 0.91199	& 0.97618	\\
-% 	ARG(0.2)	& 0.64192	& 0.56631	& 0.80102	& 0.80176	& 0.91075	& 0.91242	& 0.97588	\\\hline
-% 	\end{tabularx}
-% \end{table}
 
 \begin{table}[H]
 	\caption{Модулярности разбиений, полученных в результате работы рандомизированного жадного алгоритма и адаптивного рандомизированного жадного алгоритма с разными параметрами на тестовых графах}
@@ -274,26 +280,9 @@
  	}
 \end{table}
 
-% \begin{table}[H]
-% 	\caption{Время работы (в миллисекундах) рандомизированного жадного алгоритма и адаптивного рандомизированного жадного алгоритма с разными параметрами на тестовых графах}
-% 	\label{tab:arg-res-t}
-% 	\begin{tabularx}{\textwidth}{XR{1.5cm}R{1.5cm}R{1.5cm}R{1.5cm}R{1.5cm}R{1.5cm}R{1.5cm}}\hline
-% 				& 22july 	& cond 		& auto40	& caida 	& cnr 		& eu-2005	& in-2004	\\\hline
-% 	RG(1) 		& 177		& 58 		& 4,652		& 852		& 26,083	& 202,188	& 9,208		\\
-% 	RG(3)		& 189		& 184		& 4,591		& 9,114		& 26,056	& 200,686	& 487,953	\\
-% 	RG(10)		& 231		& 463		& 6,017		& 10,244	& 27,137	& 207,689	& 553,196	\\
-% 	RG(50)		& 464		& 931		& 12,558	& 15,217	& 33,592	& 246,170	& 607,408	\\
-% 	ARG(0)		& 238		& 477		& 6,526		& 11,573	& 30,033	& 233,761	& 622,813	\\
-% 	ARG(0.01)	& 241		& 477		& 6,807		& 11,607	& 30,465	& 226,869	& 625,124	\\
-% 	ARG(0.05)	& 238		& 474		& 6,479		& 11,514	& 29,054	& 225,748	& 617,345	\\
-% 	ARG(0.1)	& 233		& 476		& 6,428		& 11,509	& 29,971	& 226,427	& 640,454	\\
-% 	ARG(0.2)	& 222		& 351		& 6,105		& 11,220	& 29,784	& 266,038	& 616,187	\\\hline
-% 	\end{tabularx}
-% \end{table}
-
 \begin{table}[H]
 	\caption{Время работы (в миллисекундах) рандомизированного жадного алгоритма и адаптивного рандомизированного жадного алгоритма с разными параметрами на тестовых графах}
- 	\label{tab:arg-res-q}
+ 	\label{tab:arg-res-t}
  	{\scriptsize
  	\begin{tabularx}{\textwidth}{Xrrrrrrrrr}\hline
  						& $RG_1$	& $RG_3$	& $RG_{10}$	& $RG_{50}$	& $ARG_0$	&$ARG_{0.01}$	&$ARG_{0.05}$	& $ARG_{0.1}$	& $ARG_{0.2}$	\\\hline
@@ -308,6 +297,6 @@
  	}
 \end{table}
 
-В большинстве случаев один или несколько параметров $k$ дают рандомизированному жадному алгоритму лучшие результаты, чем все результаты адаптивного рандомизированного алгоритма, однако адаптивный вариант даёт более стабильные результаты при не очень большом увеличении по времени. Можно заметить, что небольшие значения параметра $\beta$ дают лучшие результаты, чем нулевое значение, а при более б\'{о}льших значениях параметра время работы алгоритма уменьшается, но незначительно. В таблицу не попали результаты алгоритмов со значениями $\beta$ больше 0.2, где время работы действительно сильно снижалось, однако и значения модулярности получались слишком маленькими.
+В большинстве случаев один или несколько параметров $k$ дают рандомизированному жадному алгоритму лучшие результаты, чем результаты адаптивного рандомизированного алгоритма, однако адаптивный вариант даёт более стабильные результаты. Можно заметить, что небольшие значения параметра $\beta$ дают лучшие результаты, чем нулевое значение, а при более б\'{о}льших значениях параметра время работы алгоритма уменьшается, но незначительно. В таблицу не попали результаты алгоритмов со значениями $\beta$ больше 0.2, где время работы действительно сильно снижалось, однако и значения модулярности получались слишком маленькими.
 
-$ARG$ можно сравнить с $RG_{10}$, так как он тоже даёт стабильные результаты, в отличии от $RG_{1},\ RG_{3}$. Однако заметно, что адаптивный алгоритм в большинстве случаев даёт б\'{о}льшую модулярность.
+$ARG$ можно сравнить с $RG_{10}$, так как он тоже даёт стабильные результаты, в отличии от $RG_{1},\ RG_{3}$. Однако заметно, что \emph{ARG} в большинстве случаев даёт б\'{о}льшую модулярность.
